fixes issues of current page link in related content sidebar having different spacing

--- a/assets-src/styles/sass/80-templates/_default.scss
+++ b/assets-src/styles/sass/80-templates/_default.scss
@@ -55,6 +55,13 @@
 
 }
 
+.related [aria-current] {
+
+	color: $off-black;
+	text-decoration: none;
+
+}
+
 @supports(grid-column-gap: 8%) {
 
 	.default .related {
